argocd/argoingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/whitelist-source-range: "103.78.107.0/24,103.167.150.0/23,103.177.248.0/23,157.10.210.0/23,202.163.0.0/19,204.79.146.0/24,204.79.191.0/24,216.155.224.0/20,2.0.0.0/15,2.2.0.0/16,2.56.28.0/22,2.57.244.0/22,2.58.0.0/22,2.59.208.0/22,2.64.0.0/13,2.248.0.0/14,2.252.0.0/15,2.254.0.0/16,2.255.0.0/17,2.255.128.0/18,2.255.192.0/18,5.22.232.0/21,5.23.56.0/21,5.35.184.0/21,5.44.176.0/21,5.44.192.0/20,5.57.240.0/21,5.133.192.0/19,5.150.192.0/18,5.152.150.0/23,5.152.152.0/23,5 [...]
    # If you encounter a redirect loop or are getting a 307 response code
    # then you need to force the nginx ingress to connect to the backend using HTTPS.
    #
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
  - host: argocd.kallhall.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https
  tls:
  - hosts:
    - argocd.kallhall.cc
    secretName: argocd-server-tls # as expected by argocd-server
